@@ -19,3 +19,7 @@ Mads Bondo Dydensborg <mads@dydensborg.dk>
 
 - highscore movement patch
 Kim Schulz <kim@schulz.dk> 
+
+- mingw support
+- various minor fixes
+Samuel Listopad II <samlii@programmer.net>
