@@ -39,6 +39,14 @@ Mix_Chunk * TSoundManager::LoadRessource(string filename) {
   return tmp1;
 }
 
+void TRessourceManager<Mix_Chunk>::UnloadRessource(Mix_Chunk * sound) {
+  if (sound)
+    Mix_FreeChunk(sound);
+  else
+    LogLine(LOG_ERROR, "Error. Tried to Unload NULL sound");
+}
+
+
 void TSoundManager::UnloadRessource(Mix_Chunk * sound) {
   if (sound)
     Mix_FreeChunk(sound);
