@@ -1,3 +1,8 @@
+2002-01-11  Mads Bondo Dydensborg  <madsdyd@ripley>
+
+	* mingw
+	minWG support have been added, thanks to Samuel Listopad II
+
 2001-12-30  Mads Bondo Dydensborg  <madsdyd@ripley>
 
 	* Console
